base/src/test/resources/failure/operator/cyclic.aya.txt
In file $FILE:9:0 ->

  7 | bind a tighter b
  8 | bind b tighter c
  9 | bind c tighter d
      ^--------------^

Error: Circular precedence found between b, c, d

Resolving interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
